force-app/main/default/objects/Transaction__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <description>Reason when Type = Adjustment. Validation rule to make it required.</description>
    <label>Adjustment Reason</label>
    <type>TextArea</type>
</CustomField>