force-app/main/default/objects/Transaction__c/fields/Balances_Set__c.field-meta.xml
<CustomField>
    <fullName>Balances_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that the balance references on the transaction have been set from the account. Set by the transaction flow when the before and after transaction balance values are set.</description>
    <label>Balances Set</label>
    <type>Checkbox</type>
</CustomField>