force-app/main/default/objects/Transaction__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WCA</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>PW</fullName>
            </value>
            <value>
                <fullName>CCU 32</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>