force-app/main/default/objects/Transaction__c/fields/Check_Count__c.field-meta.xml
<CustomField>
    <fullName>Check_Count__c</fullName>
    <label>Check Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>