force-app/main/default/objects/Transaction__c/fields/Checks_Amount__c.field-meta.xml
<CustomField>
    <fullName>Checks_Amount__c</fullName>
    <label>Checks Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>