force-app/main/default/objects/Transaction__c/fields/Checks_Purged_Date__c.field-meta.xml
<CustomField>
    <fullName>Checks_Purged_Date__c</fullName>
    <label>Checks Purged Date</label>
    <type>Date</type>
</CustomField>