force-app/main/default/objects/Transaction__c/fields/Coin_Only__c.field-meta.xml
<CustomField>
    <fullName>Coin_Only__c</fullName>
    <label>Coin Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>