force-app/main/default/objects/Transaction__c/fields/Deposit_Total__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Total__c</fullName>
    <description>Deposit Total (formula - sum currency only, coin only, checks amount ,other amount)</description>
    <formula>Currency_Only__c  +  Coin_Only__c  +  Checks_Amount__c  +  Other_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>