force-app/main/default/objects/Transaction__c/fields/Original_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Original_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this record is an adjustment to another Transaction, this field is the original Transaction.</inlineHelpText>
    <label>Original Transaction</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Transaction__c.Transaction_Status__c</field>
            <operation>notEqual</operation>
            <value>Adjusted</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Adjustment Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>