force-app/main/default/objects/Transaction__c/fields/Other_Amount_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount_Description__c</fullName>
    <description>When an amount is entered into the Other Amount field, this field describes what the amount is.</description>
    <inlineHelpText>This field is required to describe any amount entered into the Other Amount field.</inlineHelpText>
    <label>Other Amount Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>