force-app/main/default/objects/Transaction__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <inlineHelpText>Please use Transaction Status of Adjusted for adjustments made by the Sr. Deputy of Cashiering.</inlineHelpText>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>