force-app/main/default/objects/Transaction__c/recordTypes/TRN_Pending.recordType-meta.xml
<RecordType>
    <fullName>TRN_Pending</fullName>
    <active>true</active>
    <label>TRN Pending</label>
</RecordType>