force-app/main/default/objects/Transaction__c/validationRules/RecordType_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordType_Changed</fullName>
    <active>false</active>
    <description>Only Transaction Super Users are allowed to change the Record Type</description>
    <errorConditionFormula>AND(ISCHANGED(RecordTypeId),
!$Permission.Transaction_Super_User,
$Profile.Name != &#39;System Administrator LTD&#39;,
$Profile.Name != &#39;System Administrator&#39;)</errorConditionFormula>
    <errorMessage>Only Transaction Super Users can change the Record Types</errorMessage>
</ValidationRule>