force-app/main/default/objects/Transaction__c/listViews/All_Returns.listView-meta.xml
<ListView>
    <fullName>All_Returns</fullName>
    <columns>NAME</columns>
    <columns>Deposit_Date__c</columns>
    <columns>Office_Account__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Transaction_Sum__c</columns>
    <columns>Check_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Return</value>
    </filters>
    <label>All Returns</label>
</ListView>